2024-04-15T03:06:41Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/8682623066 # 183
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-04-15
* notice: last 14d: unq all: 2 3
* notice: prev accum: outdated-unq outdated-all / unq all: 780 1242 / 782 1244
* notice: next accum: outdated-unq outdated-all / unq all: 780 1242 / 783 1245
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2024-04-14]

2024-04-14T22:22:44Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/8681313762 # 182
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-04-14
* notice: last 14d: unq all: 1 2
* notice: prev accum: outdated-unq outdated-all / unq all: 764 1213 / 780 1242
* notice: next accum: outdated-unq outdated-all / unq all: 780 1242 / 782 1244
* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2024-02-22 2024-02-23 2024-02-24 2024-02-25 2024-02-26 2024-02-27 2024-02-28 2024-02-29 2024-03-01 2024-03-02 2024-03-03 2024-03-04 2024-03-05 2024-03-06 2024-03-07] / [2024-04-05 2024-04-11]

2024-03-07T08:14:55Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/8184939897 # 181
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-03-07
* notice: last 14d: unq all: 2 28
* notice: prev accum: outdated-unq outdated-all / unq all: 764 1213 / 779 1241
* notice: next accum: outdated-unq outdated-all / unq all: 764 1213 / 780 1242
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -1 / +1 +1 -0 -0 / 1 1