@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-04-15T03:06:41Z",
+  "timestamp" : "2024-04-16T00:37:36Z",
   "count_outdated" : 1242,
   "uniques_outdated" : 780,
-  "count" : 1245,
-  "uniques" : 783,
+  "count" : 1246,
+  "uniques" : 784,
   "clones" : [
     {
       "timestamp": "2024-04-05T00:00:00Z",
@@ -25,6 +25,15 @@
     },
     {
       "timestamp": "2024-04-14T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-04-15T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
